--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "dotenv": "^16.3.1",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.4",
     "react": "^18.2.0",
