--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,6 @@
   "dependencies": {
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
-    "flowbite": "^1.8.1",
-    "flowbite-react": "^0.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
@@ -30,6 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
+    "tailwindcss-no-scrollbar": "^1.0.1",
     "vite": "^4.4.5"
   }
 }
