updated tvseries, kdrama and chinesedrama pages

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,13 @@
     "cSpell.words": [
         "Kdrama",
         "MOVIEBY",
+        "movietv",
         "Nollywood",
         "philipines",
         "Phillipines",
-        "tailwindcss"
+        "setkorean",
+        "tailwindcss",
+        "TVSHOW"
     ],
     "files.autoSave": "afterDelay",
     "editor.formatOnSave": true
