added imageskeleton component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,19 @@
 {
     "cSpell.words": [
+        "Amovies",
         "imovies",
         "Kdrama",
         "MOVIEBY",
         "movietv",
         "Nollywood",
         "philipines",
+        "Phillipine",
         "Phillipines",
+        "pmovies",
         "setkorean",
+        "setsouth",
+        "southafrica",
+        "southafrican",
         "tailwindcss",
         "TVSHOW"
     ],
