--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-lazy-load": "^4.0.1",
+    "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
