--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,16 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
+    "flowbite-react": "^0.7.2",
     "million": "^2.6.4",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.0.4",
+    "react-router-dom": "^6.21.1",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
