--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "flowbite-react": "^0.7.2",
     "million": "^2.6.4",
     "moment": "^2.30.1",
+    "quill-mention": "^4.1.0",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
